fix: make service endpoints configurable